# havik

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-llm.txt
.github/workflows/: aws_tests.yml  gcp_tests.yml
html/templates/: report.html  report.html.j2
src/havik/: cli.py
src/havik/aws/: __init__.py  dynamodb.py  helpers.py  s3.py
src/havik/aws/files/: example.txt
src/havik/az/: __init__.py  storage_account.py
src/havik/gcp/: storage.py
src/havik/shared/: __init__.py  agent.py  compliance.py  helpers.py  llm.py  output.py  risk.py
src/havik/shared/files/: control_map.json
tests/: requirements-azure-test.txt
tests/aws/: test_ddb.py  test_s3.py
tests/gcp/: test_storage.py
